<resources>
    <string name="app_name">FoursquareApp</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="filter">Filter</string>
    <string name="reset">RESET</string>
    <string name="relevanse_filter">Relevance</string>
    <string name="distance_filter">Distance</string>
    <string name="sort_by">Sort By:</string>
    <string name="wifi_connection">WIFI is connected</string>
    <string name="internet_connection">Interned is connected</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="input_city_name">Input place and click on magnifier</string>
</resources>
