<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.foresquareapp.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/image_arrow_toolbar_size"
                android:layout_height="@dimen/image_arrow_toolbar_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_reset"
                android:layout_alignBottom="@+id/tv_reset"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@+id/img_back"
                android:text="@string/filter"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/filter_text_size"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:clickable="true"
                android:text="@string/reset"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/reset_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbarMain"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_sorted_margin"
                android:text="@string/sort_by"
                android:textSize="@dimen/filter_text_size"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_rel"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/icons"
                    android:text="@string/relevanse_filter" />

                <Button
                    android:id="@+id/btn_dist"
                    android:layout_width="197dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/icons"
                    android:text="@string/distance_filter" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>
